--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         // Fetch the website source code from the Node.js server
         function fetchWebsiteSource(url, callbackFunction) {
-            fetch('/fetch-url', {
+            fetch('https://download-eight-olive.vercel.app//fetch-url', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
